--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require": {
         "php": "^7.1.0",
         "doctrine/annotations": "^1.6",
+        "doctrine/cache": "^1.7.0",
         "doctrine/common": "^2.8.0",
         "fzaninotto/faker": "^1.7",
         "jms/metadata": "^1.6",
