--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         "sebastian/phpcpd":                "^4.0",
         "sensiolabs/security-checker":     "^4.1"
     },
+    "conflict": {
+        "symfony/http-foundation": "<3.4.11|<4.0.11|<4.1.0"
+    },
     "autoload": {
         "psr-4": {
           "PingLocalhost\\AnonymizerBundle\\": "src"
