--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "jms/metadata":                 "^1.6",
         "symfony/dependency-injection": "^3.4.12|^4.0.11",
         "symfony/framework-bundle":     "^3.4.12|^4.0.11",
-        "symfony/http-foundation":      "^3.4.12|^4.0.11",
+        "symfony/http-foundation":      "^3.4.14|^4.0.14|^4.1.3",
         "symfony/yaml":                 "^3.4.12|^4.0.11"
     },
     "require-dev": {
